# human-errors

./: LICENSE  README.md  pyproject.toml
examples/: bad.json  bad.toml  bad.yaml
src/human_errors/: __init__.py  base_renderer.py  json_renderer.py  parse_file.py  stack_utils.py  toml_renderer.py  utils.py  yaml_renderer.py
src/human_errors/renderers/: default.py  miette.py  nu.py
